--- a/LadyBird_Foundation/app/src/main/res/layout/activity_main.xml
+++ b/LadyBird_Foundation/app/src/main/res/layout/activity_main.xml
@@ -60,7 +60,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/main_TV4"
-        app:srcCompat="@drawable/ladybird"
+        app:srcCompat="@drawable/lb1"
         tools:ignore="MissingConstraints"
         android:importantForAccessibility="no" />
 
