--- a/LadyBird_Foundation/app/src/main/res/layout/activity_main.xml
+++ b/LadyBird_Foundation/app/src/main/res/layout/activity_main.xml
@@ -17,10 +17,9 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.733"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.796"
+        app:layout_constraintVertical_bias="0.728"
         tools:ignore="SpUsage,TextSizeCheck,VisualLintOverlap" />
 
     <ImageView
@@ -44,10 +43,10 @@
         android:importantForAccessibility="no"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.98"
+        app:layout_constraintVertical_bias="0.858"
         app:srcCompat="@drawable/splash"
         tools:ignore="VisualLintBounds" />
 
@@ -55,13 +54,13 @@
         android:id="@+id/main_LBgif"
         android:layout_width="113dp"
         android:layout_height="114dp"
-        android:layout_marginTop="14dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        android:importantForAccessibility="no"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/main_TV4"
+        app:layout_constraintTop_toTopOf="@+id/main_LBImg"
+        app:layout_constraintVertical_bias="0.952"
         app:srcCompat="@drawable/lb1"
-        tools:ignore="MissingConstraints"
-        android:importantForAccessibility="no" />
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
