--- a/LadyBird_Foundation/app/src/main/res/layout/activity_donate.xml
+++ b/LadyBird_Foundation/app/src/main/res/layout/activity_donate.xml
@@ -4,11 +4,88 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AboutUs"
+    tools:context=".Donate"
     android:background="@drawable/home">
 
     <ImageView
-        android:id="@+id/about_adminDashboard"
+        android:id="@+id/donate_homeImg"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.07"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/donate_divider"
+        app:layout_constraintVertical_bias="0.567"
+        app:srcCompat="@drawable/baseline_home_24"
+        android:importantForAccessibility="no" />
+
+    <ImageView
+        android:id="@+id/donate_donationImg"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.235"
+        app:layout_constraintStart_toEndOf="@+id/donate_aboutUsImg"
+        app:layout_constraintTop_toBottomOf="@+id/donate_divider"
+        app:layout_constraintVertical_bias="0.567"
+        app:srcCompat="@drawable/baseline_attach_money_24"
+        android:importantForAccessibility="no" />
+
+    <ImageView
+        android:id="@+id/donate_aboutUsImg"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.172"
+        app:layout_constraintStart_toEndOf="@+id/donate_homeImg"
+        app:layout_constraintTop_toBottomOf="@+id/donate_divider"
+        app:layout_constraintVertical_bias="0.567"
+        app:srcCompat="@drawable/baseline_info_24"
+        android:importantForAccessibility="no" />
+
+    <ImageView
+        android:id="@+id/donate_loginoutImg"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.718"
+        app:layout_constraintStart_toEndOf="@+id/donate_eventsImg"
+        app:layout_constraintTop_toBottomOf="@+id/donate_divider"
+        app:layout_constraintVertical_bias="0.567"
+        app:srcCompat="@drawable/baseline_login_24"
+        android:importantForAccessibility="no" />
+
+    <ImageView
+        android:id="@+id/donate_eventsImg"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.335"
+        app:layout_constraintStart_toEndOf="@+id/donate_donationImg"
+        app:layout_constraintTop_toBottomOf="@+id/donate_divider"
+        app:layout_constraintVertical_bias="0.567"
+        app:srcCompat="@drawable/baseline_event_24"
+        android:importantForAccessibility="no" />
+
+    <View
+        android:id="@+id/donate_divider"
+        android:layout_width="409dp"
+        android:layout_height="1dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.897" />
+
+    <ImageView
+        android:id="@+id/donate_adminDashboard"
         android:layout_width="70dp"
         android:layout_height="59dp"
         android:importantForAccessibility="no"
@@ -20,82 +97,5 @@
         app:layout_constraintVertical_bias="0.005"
         app:srcCompat="@drawable/willladybughome"
         tools:ignore="ImageContrastCheck" />
-
-    <ImageView
-        android:id="@+id/about_homeImg"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.07"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/about_divider"
-        app:layout_constraintVertical_bias="0.567"
-        app:srcCompat="@drawable/baseline_home_24"
-        android:importantForAccessibility="no" />
-
-    <ImageView
-        android:id="@+id/about_donationImg"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.235"
-        app:layout_constraintStart_toEndOf="@+id/about_aboutUsImg"
-        app:layout_constraintTop_toBottomOf="@+id/about_divider"
-        app:layout_constraintVertical_bias="0.567"
-        app:srcCompat="@drawable/baseline_attach_money_24"
-        android:importantForAccessibility="no" />
-
-    <ImageView
-        android:id="@+id/about_aboutUsImg"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.172"
-        app:layout_constraintStart_toEndOf="@+id/about_homeImg"
-        app:layout_constraintTop_toBottomOf="@+id/about_divider"
-        app:layout_constraintVertical_bias="0.567"
-        app:srcCompat="@drawable/baseline_info_24"
-        android:importantForAccessibility="no" />
-
-    <ImageView
-        android:id="@+id/about_loginoutImg"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.718"
-        app:layout_constraintStart_toEndOf="@+id/about_eventsImg"
-        app:layout_constraintTop_toBottomOf="@+id/about_divider"
-        app:layout_constraintVertical_bias="0.567"
-        app:srcCompat="@drawable/baseline_login_24"
-        android:importantForAccessibility="no" />
-
-    <ImageView
-        android:id="@+id/about_eventsImg"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.335"
-        app:layout_constraintStart_toEndOf="@+id/about_donationImg"
-        app:layout_constraintTop_toBottomOf="@+id/about_divider"
-        app:layout_constraintVertical_bias="0.567"
-        app:srcCompat="@drawable/baseline_event_24"
-        android:importantForAccessibility="no" />
-
-    <View
-        android:id="@+id/about_divider"
-        android:layout_width="409dp"
-        android:layout_height="1dp"
-        android:background="?android:attr/listDivider"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.897" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
