--- a/LadyBird_Foundation/app/src/main/res/layout/activity_donate.xml
+++ b/LadyBird_Foundation/app/src/main/res/layout/activity_donate.xml
@@ -8,6 +8,20 @@
     android:background="@drawable/home">
 
     <ImageView
+        android:id="@+id/donate_adminDashboard"
+        android:layout_width="70dp"
+        android:layout_height="59dp"
+        android:importantForAccessibility="no"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.005"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/willladybughome"
+        tools:ignore="ImageContrastCheck" />
+
+    <ImageView
         android:id="@+id/donate_homeImg"
         android:layout_width="30dp"
         android:layout_height="30dp"
@@ -24,53 +38,53 @@
         android:id="@+id/donate_donationImg"
         android:layout_width="30dp"
         android:layout_height="30dp"
+        android:importantForAccessibility="no"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.235"
+        app:layout_constraintHorizontal_bias="0.147"
         app:layout_constraintStart_toEndOf="@+id/donate_aboutUsImg"
         app:layout_constraintTop_toBottomOf="@+id/donate_divider"
-        app:layout_constraintVertical_bias="0.567"
-        app:srcCompat="@drawable/baseline_attach_money_24"
-        android:importantForAccessibility="no" />
+        app:layout_constraintVertical_bias="0.577"
+        app:srcCompat="@drawable/baseline_attach_money_24" />
 
     <ImageView
         android:id="@+id/donate_aboutUsImg"
         android:layout_width="30dp"
         android:layout_height="30dp"
+        android:importantForAccessibility="no"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.172"
+        app:layout_constraintHorizontal_bias="0.114"
         app:layout_constraintStart_toEndOf="@+id/donate_homeImg"
         app:layout_constraintTop_toBottomOf="@+id/donate_divider"
-        app:layout_constraintVertical_bias="0.567"
-        app:srcCompat="@drawable/baseline_info_24"
-        android:importantForAccessibility="no" />
+        app:layout_constraintVertical_bias="0.577"
+        app:srcCompat="@drawable/baseline_info_24" />
 
     <ImageView
         android:id="@+id/donate_loginoutImg"
         android:layout_width="30dp"
         android:layout_height="30dp"
+        android:importantForAccessibility="no"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.718"
+        app:layout_constraintHorizontal_bias="0.724"
         app:layout_constraintStart_toEndOf="@+id/donate_eventsImg"
         app:layout_constraintTop_toBottomOf="@+id/donate_divider"
-        app:layout_constraintVertical_bias="0.567"
-        app:srcCompat="@drawable/baseline_login_24"
-        android:importantForAccessibility="no" />
+        app:layout_constraintVertical_bias="0.577"
+        app:srcCompat="@drawable/baseline_login_24" />
 
     <ImageView
         android:id="@+id/donate_eventsImg"
         android:layout_width="30dp"
         android:layout_height="30dp"
+        android:importantForAccessibility="no"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.335"
+        app:layout_constraintHorizontal_bias="0.55"
         app:layout_constraintStart_toEndOf="@+id/donate_donationImg"
         app:layout_constraintTop_toBottomOf="@+id/donate_divider"
-        app:layout_constraintVertical_bias="0.567"
-        app:srcCompat="@drawable/baseline_event_24"
-        android:importantForAccessibility="no" />
+        app:layout_constraintVertical_bias="0.577"
+        app:srcCompat="@drawable/baseline_event_24" />
 
     <View
         android:id="@+id/donate_divider"
@@ -85,17 +99,15 @@
         app:layout_constraintVertical_bias="0.897" />
 
     <ImageView
-        android:id="@+id/donate_adminDashboard"
-        android:layout_width="70dp"
-        android:layout_height="59dp"
-        android:importantForAccessibility="no"
+        android:id="@+id/donate_locationImg"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.041"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.005"
-        app:srcCompat="@drawable/willladybughome"
-        tools:ignore="ImageContrastCheck" />
+        app:layout_constraintEnd_toStartOf="@+id/donate_eventsImg"
+        app:layout_constraintHorizontal_bias="0.486"
+        app:layout_constraintStart_toEndOf="@+id/donate_donationImg"
+        app:layout_constraintTop_toBottomOf="@+id/donate_divider"
+        app:layout_constraintVertical_bias="0.577"
+        app:srcCompat="@drawable/baseline_share_location_24" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
