--- a/LadyBird_Foundation/app/src/main/res/layout/activity_admin_dashboard.xml
+++ b/LadyBird_Foundation/app/src/main/res/layout/activity_admin_dashboard.xml
@@ -4,6 +4,95 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Admin_Dashboard">
+    tools:context=".Admin_Dashboard"
+    android:background="@drawable/home">
+
+    <Spinner
+        android:id="@+id/admin_pagespinner"
+        android:layout_width="350dp"
+        android:layout_height="50dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.108" />
+
+    <ImageView
+        android:id="@+id/admin_homeImg"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.07"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/admin_divider"
+        app:layout_constraintVertical_bias="0.567"
+        app:srcCompat="@drawable/baseline_home_24"
+        android:importantForAccessibility="no" />
+
+    <ImageView
+        android:id="@+id/admin_donationImg"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.235"
+        app:layout_constraintStart_toEndOf="@+id/admin_aboutUsImg"
+        app:layout_constraintTop_toBottomOf="@+id/admin_divider"
+        app:layout_constraintVertical_bias="0.567"
+        app:srcCompat="@drawable/baseline_attach_money_24"
+        android:importantForAccessibility="no" />
+
+    <ImageView
+        android:id="@+id/admin_aboutUsImg"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.172"
+        app:layout_constraintStart_toEndOf="@+id/admin_homeImg"
+        app:layout_constraintTop_toBottomOf="@+id/admin_divider"
+        app:layout_constraintVertical_bias="0.567"
+        app:srcCompat="@drawable/baseline_info_24"
+        android:importantForAccessibility="no" />
+
+    <ImageView
+        android:id="@+id/admin_loginoutImg"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.718"
+        app:layout_constraintStart_toEndOf="@+id/admin_eventsImg"
+        app:layout_constraintTop_toBottomOf="@+id/admin_divider"
+        app:layout_constraintVertical_bias="0.567"
+        app:srcCompat="@drawable/baseline_login_24"
+        android:importantForAccessibility="no" />
+
+    <ImageView
+        android:id="@+id/admin_eventsImg"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.335"
+        app:layout_constraintStart_toEndOf="@+id/admin_donationImg"
+        app:layout_constraintTop_toBottomOf="@+id/admin_divider"
+        app:layout_constraintVertical_bias="0.567"
+        app:srcCompat="@drawable/baseline_event_24"
+        android:importantForAccessibility="no" />
+
+    <View
+        android:id="@+id/admin_divider"
+        android:layout_width="409dp"
+        android:layout_height="1dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.897" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
