--- a/LadyBird_Foundation/app/src/main/res/layout/activity_regsiter.xml
+++ b/LadyBird_Foundation/app/src/main/res/layout/activity_regsiter.xml
@@ -42,37 +42,6 @@
         tools:ignore="TextFields,VisualLintOverlap"
         android:importantForAutofill="no" />
 
-    <EditText
-        android:id="@+id/register_password"
-        android:layout_width="350dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="400dp"
-        android:ems="10"
-        android:hint="@string/register_password"
-        android:inputType="text"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="TextFields"
-        android:importantForAutofill="no" />
-
-    <EditText
-        android:id="@+id/register_confirmPassword"
-        android:layout_width="350dp"
-        android:layout_height="50dp"
-        android:ems="10"
-        android:hint="@string/register_confirm_password"
-        android:importantForAutofill="no"
-        android:inputType="text"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.679"
-        tools:ignore="TextFields,TextContrastCheck" />
-
     <Button
         android:id="@+id/register_regBtn"
         android:layout_width="165dp"
@@ -93,10 +62,9 @@
         android:importantForAccessibility="no"
         app:layout_constraintBottom_toBottomOf="@+id/register_createNew"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="0.326"
         app:srcCompat="@drawable/register" />
 
     <TextView
@@ -128,5 +96,38 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/register_alreadyRegsitered"
         app:layout_constraintVertical_bias="1.0" />
+
+    <EditText
+        android:id="@+id/register_password"
+        android:layout_width="350dp"
+        android:layout_height="50dp"
+        android:ems="10"
+        android:hint="@string/register_password"
+        android:importantForAutofill="no"
+        android:inputType="text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/register_email"
+        app:layout_constraintVertical_bias="0.041"
+        tools:ignore="TextFields" />
+
+    <EditText
+        android:id="@+id/register_confirmPassword"
+        android:layout_width="350dp"
+        android:layout_height="50dp"
+        android:ems="10"
+        android:hint="@string/register_confirm_password"
+        android:importantForAutofill="no"
+        android:inputType="text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.679"
+        tools:ignore="TextFields,TextContrastCheck" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
