--- a/LadyBird_Foundation/app/src/main/res/layout/activity_admin_dashboard.xml
+++ b/LadyBird_Foundation/app/src/main/res/layout/activity_admin_dashboard.xml
@@ -21,6 +21,19 @@
         android:importantForAccessibility="no" />
 
     <ImageView
+        android:id="@+id/admin_aboutus_IV"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.856"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.061"
+        app:srcCompat="@drawable/aboutus1" />
+
+    <ImageView
         android:id="@+id/admin_donationImg"
         android:layout_width="30dp"
         android:layout_height="30dp"
@@ -94,10 +107,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.095"
-        app:srcCompat="@drawable/eventw" />
+        app:srcCompat="@drawable/event1" />
 
     <ImageView
         android:id="@+id/imageView6"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.856"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/admin_aboutus_IV"
+        app:layout_constraintVertical_bias="0.112"
+        app:srcCompat="@drawable/donation1" />
+
+    <ImageView
+        android:id="@+id/admin_location_IV"
         android:layout_width="160dp"
         android:layout_height="160dp"
         android:layout_marginTop="20dp"
@@ -106,8 +131,8 @@
         app:layout_constraintHorizontal_bias="0.107"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView5"
-        app:layout_constraintVertical_bias="0.118"
-        app:srcCompat="@drawable/donationw" />
+        app:layout_constraintVertical_bias="0.056"
+        app:srcCompat="@drawable/locations1" />
 
     <ImageView
         android:id="@+id/imageView7"
@@ -115,10 +140,10 @@
         android:layout_height="160dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.546"
-        app:layout_constraintStart_toEndOf="@+id/imageView5"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.094"
-        app:srcCompat="@drawable/contact" />
+        app:layout_constraintHorizontal_bias="0.107"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/admin_location_IV"
+        app:layout_constraintVertical_bias="0.246"
+        app:srcCompat="@drawable/contactus1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
