--- a/LadyBird_Foundation/app/src/main/res/layout/admin_add_event.xml
+++ b/LadyBird_Foundation/app/src/main/res/layout/admin_add_event.xml
@@ -83,7 +83,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="58dp"
         android:backgroundTint="#932020"
-        android:text="Save"
+        android:text="Add Event"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
